ingress/app1/manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1
  annotations:
   alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
   alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:154514164240:certificate/26bf8ef7-5066-4166-a937-d92049a4ff33
   alb.ingress.kubernetes.io/scheme: internet-facing
   alb.ingress.kubernetes.io/target-type: ip
   alb.ingress.kubernetes.io/group.name: joindevops

spec:
  ingressClassName: alb
  rules:
  - host: "app1.daws86s.fun"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service: 
            name: app1
            port: 
              number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  # deployment labels
  labels:
    purpose: ingress
    project: roboshop
    app: app1
spec:
  replicas: 2
  # These are the labels replica set use to create pod replicas, this should match pod labels
  selector:
    matchLabels:
      purpose: ingress
      project: roboshop
      app: app1
  # This is pod definition
  template:
    metadata:
      labels:
        purpose: ingress
        project: roboshop
        app: app1
    spec:
      containers:
      - name: app1
        image: joindevops/app1:v1

---
apiVersion: v1
kind: Service
metadata:
  name: app1
  labels:
    purpose: ingress
    project: roboshop
    app: app1
spec:
  selector:
    purpose: ingress
    project: roboshop
    app: app1
  ports:
    - protocol: TCP
      port: 80 # service port
      targetPort: 80 # container port
